@@ -5,6 +5,7 @@ Release date: April 17, 2020
 * Fixed: Gravity Forms CSS & JS files were loading on all pages
 * Fixed: Link effects CSS issue
 * Fixed: Title container HTML markup in Info Box and Info Box carousel widgets
+* Fixed: Lightbox and Image Link options in Instagram Feed widget
 
 == 1.2.9.2 ==
 Release date: April 8, 2020
